--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 [submodule "lib/poc-election-contract"]
 	path = lib/poc-election-contract
-	url = https://github.com/spire-labs/poc-election-contract
+	url = git@github.com:spire-labs/poc-election-contract.git
